28.11.2010
        - Finished porting Marker View. (Orcan)
27.11.2010
        - Completed porting pianoroll module including menus, shortcuts. Should be done. (Tim)
        - Ported the following .ui widgets to Qt4: organguibase, gatetime, midisync,
          routedialogbase, vamguibase, 1050, 2142. (Orcan)
        - Fixed the whatsthis and tooltip bits of tho Midi Ports dialog. (Orcan)
        - Ported Quant Config dialog. (Orcan)
        - Ported the popup menus in the canvas. This should restore the color selection of tracks. (Orcan)
        - Removed midiportroutebase.ui, fdialogbase.ui (the one from organ) (Orcan)
        - Removed some unnecessary Q3* references. Converted popup menus in various places. (Orcan)
26.11.2010
        - Fixed midi trackinfo growing size - set output device list box and instrument button 
           h-size policy to 'Ignore'. (Tim)
        - Fixed trackinfo spinboxes only go to 99 - changed some trackinfo ui spinbox properties
           (maxValue -> maximum, minValue -> minimum etc). (Tim)
        - Fixed SpinBoxFP class. Was never right before. (Tim)
        - Fixed transform and input transform ui files and dialogs - using the corrected SpinBoxFP. (Tim)   
        - Converted comboQuant widget to Qt4 (found in miditransform dialog). 
          TODO: Doesn't actually open - why? (Tim)
        - Finished porting edit instrument dialog to Qt4. listitem.h is removed as it is no longer
          needed. (Orcan)
        - Added missing includes on comboQuant. The compilation was failing here. (Orcan)
25.11.2010
        - Fixed column widths, alignments, device renaming and jack device creation issues in synthconfigbase.
          Somehow the last changelog entry about this didn't get committed. That's added too. (Orcan)
24.11.2010
        - Resinstated the Midi Transformer. Was left out when both TF and iTF were removed, and then I 
           asked for them to be put back. So yes, transformbase.ui is used now. (Tim)